--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 	Tags: one-column, two-columns, left-sidebar, right-sidebar, custom-menu, custom-logo, custom-colors, custom-header, featured-images, featured-image-header, microformats, theme-options, footer-widgets, threaded-comments, translation-ready, blog, entertainment
 	License: GNU General Public License v3 or later
 	License URI: http://www.gnu.org/licenses/gpl-3.0.html
-	Text Domain: mynote
+	Text Domain: panote
 */
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&family=Ubuntu+Mono&display=swap");
 ::selection {
