fix(style): Fix error

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@
 }
 
 /* Homepage post list*/
-article.article-list > h5.card-title {
+article.article-list h5.card-title {
   font-size:2.0rem;
 }
 
