--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ article.article-list h5.card-title {
 .single-post-header {
   background-color: #fafbfc;
   background: none;
-  padding: 20px 0px;
+  padding: 0 0 20px 0px;
   margin-bottom: 20px;
   border-bottom: 0px solid #e1e4e8;
 }
@@ -1585,7 +1585,9 @@ nav[data-toggle="toc"] .nav-link.active + ul {
 
 .breadcrumb {
   font-size: 0.813rem !important;
+  padding: 20px 5px;
   border-radius: 0 !important;
+  background: transparent;
 }
 .breadcrumb ul,
 .breadcrumb li {
