feat(loop): Change position author

--- a/style.css
+++ b/style.css
@@ -404,6 +404,7 @@ article figcaption {
   color: #666666;
   /* min-height: 250px; */
   overflow: hidden;
+  padding: 0 20px;
 }
 .article-list a {
   color: #333333;
