--- a/style.css
+++ b/style.css
@@ -387,11 +387,11 @@ article figcaption {
 }
 .main-header.has-custom-header .desc-text {
   color: #dee2e6;
-  padding: 15px 45px;
+  padding: 15px 25px;
   background-color: rgba(0, 0, 0, 0.2);
-  border-top-left-radius: 1.5em;
-  border-bottom-right-radius: 3em;
-  font-style: italic;
+  /* border-top-left-radius: 1.5em; */
+  /* border-bottom-right-radius: 3em; */
+  /* font-style: italic; */
 }
 
 @media (max-width: 767.98px) {
