--- a/style.css
+++ b/style.css
@@ -2455,25 +2455,25 @@ p > object:only-child {
 }
 .markdown-body h1 {
   padding-bottom: 0.3em;
-  font-size: 2em;
+  font-size: 1.8rem;
   border-bottom: 1px solid #eaecef;
 }
 .markdown-body h2 {
   padding-bottom: 0.3em;
-  font-size: 1.5em;
+  font-size: 1.5rem;
   border-bottom: 1px solid #eaecef;
 }
 .markdown-body h3 {
-  font-size: 1.25em;
+  font-size: 1.3rem;
 }
 .markdown-body h4 {
-  font-size: 1em;
+  font-size: 1.2rem;
 }
 .markdown-body h5 {
-  font-size: 0.875em;
+  font-size: 1rem;
 }
 .markdown-body h6 {
-  font-size: 0.85em;
+  font-size: 1rem;
   color: #6a737d;
 }
 .markdown-body ul,
