--- a/style.css
+++ b/style.css
@@ -303,6 +303,7 @@ article figcaption {
   background-image: linear-gradient(
     to bottom,
     transparent,
+    rgba(0,0,0, 0),
     rgba(255, 255, 255, 0.2),
     rgba(255, 255, 255, 0.2),
     rgba(255, 255, 255, 0.6),white );
