--- a/style.css
+++ b/style.css
@@ -583,6 +583,29 @@ article figcaption {
   padding-top: 60px;
 }
 
+/* 
+
+footer nav style
+
+*/
+.nav-links {
+	float: none;
+}
+
+.nav-links .nav-next{
+	float: right;
+	background: rgba(27, 31, 35, 0.05);
+	padding: 0.85em;
+	border-radius: 1.3rem;
+}
+
+.nav-links .nav-previous{
+	float: left;
+	background: rgba(27, 31, 35, 0.05);
+	padding: 0.85em;
+	border-radius: 1.3rem;
+}
+
 .footer {
   margin: 40px 0 20px 0;
 }
