--- a/style.css
+++ b/style.css
@@ -594,16 +594,18 @@ footer nav style
 
 .nav-links .nav-next{
 	float: right;
-	background: rgba(27, 31, 35, 0.05);
+	background: rgb(27, 31, 35, 0.03);
 	padding: 0.85em;
 	border-radius: 1.3rem;
+	border: 1px solid rgba(27, 31, 35, 0.05);
 }
 
 .nav-links .nav-previous{
 	float: left;
-	background: rgba(27, 31, 35, 0.05);
+	background: rgb(27, 31, 35, 0.03);
 	padding: 0.85em;
 	border-radius: 1.3rem;
+	border: 1px solid rgba(27, 31, 35, 0.05);
 }
 
 .footer {
