--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 	License URI: http://www.gnu.org/licenses/gpl-3.0.html
 	Text Domain: mynote
 */
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&family=Ubuntu+Mono&display=swap");
+/*@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&family=Ubuntu+Mono&display=swap");*/
 ::selection {
   background: #04a4cc;
   color: #fff;
@@ -904,102 +904,11 @@ article figcaption {
 }
 
 /* Use the best fit font for different languages */
-/* :lang(en) body {
-  font-family: "-apple-system", "BlinkMacSystemFont", "Helvetica Neue",
-    "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", sans-serif;
-}
-:lang(en) h1,
-:lang(en) h2,
-:lang(en) h3,
-:lang(en) h4,
-:lang(en) h5,
-:lang(en) h6 {
-  font-family: "-apple-system", "BlinkMacSystemFont", "Helvetica Neue",
-    "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", sans-serif;
-}
-:lang(en) .section-intro,
-:lang(en) #post-title,
-:lang(en) .site-info {
-  font-family: "Roboto", "-apple-system", "BlinkMacSystemFont", "Helvetica Neue",
-    "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", sans-serif;
-}
-
-:lang(zh) body {
-  font-family: "-apple-system", "BlinkMacSystemFont", "Helvetica Neue",
-    "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", "微軟正黑體",
-    "Microsoft JhengHei", "SimHei", "Microsoft YaHei", "文泉驛正黑",
-    "WenQuanYi Zen Hei", "儷黑 Pro", "LiHei Pro", "標楷體", "DFKai-SB";
-}
-:lang(zh) h1,
-:lang(zh) h2,
-:lang(zh) h3,
-:lang(zh) h4,
-:lang(zh) h5,
-:lang(zh) h6 {
-  font-family: "-apple-system", "BlinkMacSystemFont", "Helvetica Neue",
-    "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", "文泉驛正黑",
-    "WenQuanYi Zen Hei", "儷黑 Pro", "LiHei Pro", "微軟正黑體",
-    "Microsoft JhengHei", "SimHei", "Microsoft YaHei", "標楷體", "DFKai-SB";
-}
-:lang(zh) .section-intro,
-:lang(zh) #post-title,
-:lang(zh) .site-info {
-  font-family: "Roboto", "-apple-system", "BlinkMacSystemFont", "Helvetica Neue",
-    "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", "文泉驛正黑",
-    "WenQuanYi Zen Hei", "儷黑 Pro", "LiHei Pro", "微軟正黑體",
-    "Microsoft JhengHei", "SimHei", "Microsoft YaHei", "標楷體", "DFKai-SB";
-}
-
-:lang(ja) body {
-  font-family: "-apple-system", "BlinkMacSystemFont", "Helvetica Neue",
-    "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans",
-    "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "Osaka", "メイリオ",
-    "Meiryo", "ＭＳ Ｐゴシック", "MS PGothic";
-}
-:lang(ja) h1,
-:lang(ja) h2,
-:lang(ja) h3,
-:lang(ja) h4,
-:lang(ja) h5,
-:lang(ja) h6 {
-  font-family: "-apple-system", "BlinkMacSystemFont", "Helvetica Neue",
-    "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans",
-    "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "Osaka", "メイリオ",
-    "Meiryo", "ＭＳ Ｐゴシック", "MS PGothic";
-}
-:lang(ja) .section-intro,
-:lang(ja) #post-title,
-:lang(ja) .site-info {
-  font-family: "Roboto", "-apple-system", "BlinkMacSystemFont", "Helvetica Neue",
-    "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans",
-    "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "Osaka", "メイリオ",
-    "Meiryo", "ＭＳ Ｐゴシック", "MS PGothic";
-}
-
-:lang(ko) body {
-  font-family: "-apple-system", "BlinkMacSystemFont", "Helvetica Neue",
-    "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", "Dotum", "Gulim";
-}
-:lang(ko) h1,
-:lang(ko) h2,
-:lang(ko) h3,
-:lang(ko) h4,
-:lang(ko) h5,
-:lang(ko) h6 {
-  font-family: "-apple-system", "BlinkMacSystemFont", "Helvetica Neue",
-    "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", "Dotum", "Gulim";
-}
-:lang(ko) .section-intro,
-:lang(ko) #post-title,
-:lang(ko) .site-info {
-  font-family: "Roboto", "-apple-system", "BlinkMacSystemFont", "Helvetica Neue",
-    "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", "Dotum", "Gulim";
-} */
 
 body {
-  font-family: "Noto Sans KR", "-apple-system", "BlinkMacSystemFont",
-    "Helvetica Neue", "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans",
-    "맑은 고딕", "Malgun Gothic", "Dotum", "Gulim";
+  font-family: "-apple-system", "BlinkMacSystemFont", "Helvetica Neue",
+    "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", "맑은 고딕",
+    "Malgun Gothic", "Dotum", "Gulim";
 }
 h1,
 h2,
@@ -1007,16 +916,16 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Noto Sans KR", "-apple-system", "BlinkMacSystemFont",
-    "Helvetica Neue", "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans",
-    "맑은 고딕", "Malgun Gothic", "Dotum", "Gulim";
+  font-family: "-apple-system", "BlinkMacSystemFont", "Helvetica Neue",
+    "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", "맑은 고딕",
+    "Malgun Gothic", "Dotum", "Gulim";
 }
 .section-intro,
 #post-title,
 .site-info {
-  font-family: "Noto Sans KR", "-apple-system", "BlinkMacSystemFont",
-    "Helvetica Neue", "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans",
-    "맑은 고딕", "Malgun Gothic", "Dotum", "Gulim";
+  font-family: "-apple-system", "BlinkMacSystemFont", "Helvetica Neue",
+    "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Open Sans", "맑은 고딕",
+    "Malgun Gothic", "Dotum", "Gulim";
 }
 
 /* Sidebar widgets */
